--- a/pom.xml
+++ b/pom.xml
@@ -118,7 +118,7 @@
             <!-- Default configuration for running with: mvn clean javafx:run -->
             <id>default-cli</id>
             <configuration>
-              <mainClass>com.example.proiectoop/com.example.proiectoop.Main</mainClass>
+              <mainClass>com.example.proiectoop/com.example.proiectoop.View</mainClass>
               <launcher>app</launcher>
               <jlinkZipName>app</jlinkZipName>
               <jlinkImageName>app</jlinkImageName>
